--- a/notebooks/Jonas_1.ipynb
+++ b/notebooks/Jonas_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,8 @@
     }
    ],
    "source": [
+    "import glob\n",
+    "import regex as re\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xgboost as xgb\n",
@@ -246,6 +248,210 @@
    ],
    "source": [
     "stations.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>in/ES_8_2013-2015_timeseries.csv:ES</th>\n",
+       "      <th>ES.BDCA.AQD</th>\n",
+       "      <th>NET_ES209A</th>\n",
+       "      <th>STA_ES1992A</th>\n",
+       "      <th>ES1992A</th>\n",
+       "      <th>SP_08019057_8_8</th>\n",
+       "      <th>SPP_08019057_8_8.1</th>\n",
+       "      <th>SAM_08019057_8_8</th>\n",
+       "      <th>NO2</th>\n",
+       "      <th>http://dd.eionet.europa.eu/vocabulary/aq/pollutant/8</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>12</th>\n",
+       "      <th>µg/m3</th>\n",
+       "      <th>2013-02-13 01:00:00</th>\n",
+       "      <th>2013-02-13 02:00:00</th>\n",
+       "      <th>1</th>\n",
+       "      <th>1.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2004</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>10</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-08-03 14:00:00</td>\n",
+       "      <td>2013-08-03 15:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6948</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>14</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-04-21 07:00:00</td>\n",
+       "      <td>2013-04-21 08:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2719</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>34</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-09-02 14:00:00</td>\n",
+       "      <td>2013-09-02 15:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8041</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>27</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-06-03 12:00:00</td>\n",
+       "      <td>2013-06-03 13:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7408</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>38</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-05-07 23:00:00</td>\n",
+       "      <td>2013-05-08 00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD  NET_ES209A  \\\n",
+       "2004  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD  NET_ES209A   \n",
+       "6948  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD  NET_ES209A   \n",
+       "2719  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD  NET_ES209A   \n",
+       "8041  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD  NET_ES209A   \n",
+       "7408  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD  NET_ES209A   \n",
+       "\n",
+       "      STA_ES1992A  ES1992A  SP_08019057_8_8  SPP_08019057_8_8.1  \\\n",
+       "2004  STA_ES1992A  ES1992A  SP_08019057_8_8  SPP_08019057_8_8.1   \n",
+       "6948  STA_ES1992A  ES1992A  SP_08019057_8_8  SPP_08019057_8_8.1   \n",
+       "2719  STA_ES1992A  ES1992A  SP_08019057_8_8  SPP_08019057_8_8.1   \n",
+       "8041  STA_ES1992A  ES1992A  SP_08019057_8_8  SPP_08019057_8_8.1   \n",
+       "7408  STA_ES1992A  ES1992A  SP_08019057_8_8  SPP_08019057_8_8.1   \n",
+       "\n",
+       "      SAM_08019057_8_8  NO2  \\\n",
+       "2004  SAM_08019057_8_8  NO2   \n",
+       "6948  SAM_08019057_8_8  NO2   \n",
+       "2719  SAM_08019057_8_8  NO2   \n",
+       "8041  SAM_08019057_8_8  NO2   \n",
+       "7408  SAM_08019057_8_8  NO2   \n",
+       "\n",
+       "     http://dd.eionet.europa.eu/vocabulary/aq/pollutant/8  hour  12  µg/m3  \\\n",
+       "2004  http://dd.eionet.europa.eu/vocabulary/aq/pollu...    hour  10  µg/m3   \n",
+       "6948  http://dd.eionet.europa.eu/vocabulary/aq/pollu...    hour  14  µg/m3   \n",
+       "2719  http://dd.eionet.europa.eu/vocabulary/aq/pollu...    hour  34  µg/m3   \n",
+       "8041  http://dd.eionet.europa.eu/vocabulary/aq/pollu...    hour  27  µg/m3   \n",
+       "7408  http://dd.eionet.europa.eu/vocabulary/aq/pollu...    hour  38  µg/m3   \n",
+       "\n",
+       "      2013-02-13 01:00:00  2013-02-13 02:00:00  1  1.1  \n",
+       "2004  2013-08-03 14:00:00  2013-08-03 15:00:00  1    1  \n",
+       "6948  2013-04-21 07:00:00  2013-04-21 08:00:00  1    1  \n",
+       "2719  2013-09-02 14:00:00  2013-09-02 15:00:00  1    1  \n",
+       "8041  2013-06-03 12:00:00  2013-06-03 13:00:00  1    1  \n",
+       "7408  2013-05-07 23:00:00  2013-05-08 00:00:00  1    1  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observations = []\n",
+    "for folder in glob.glob('../data/obs/*'):\n",
+    "    for file in glob.glob('{}/*'.format(folder)):\n",
+    "        year = re.search('\\d{4}', file)[0]\n",
+    "        station = 'ES{}A'.format(re.findall('\\d{4}', file)[1])\n",
+    "        data = pd.read_csv(file, sep='\\t')\n",
+    "        observations.append((year, station, data))\n",
+    "        \n",
+    "observations[0][2].sample(5)"
    ]
   },
   {
