Models data as well

--- a/notebooks/Jonas_1.ipynb
+++ b/notebooks/Jonas_1.ipynb
@@ -252,19 +252,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'headers_obs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-68-3bcfb1578e06>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0myear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\d{4}'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mstation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'ES{}A'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\d{4}'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheaders_obs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mobservations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'headers_obs' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Countrycode</th>\n",
+       "      <th>Namespace</th>\n",
+       "      <th>AirQualityNetwork</th>\n",
+       "      <th>AirQualityStation</th>\n",
+       "      <th>AirQualityStationEoICode</th>\n",
+       "      <th>SamplingPoint</th>\n",
+       "      <th>SamplingProcess</th>\n",
+       "      <th>Sample</th>\n",
+       "      <th>AirPollutant</th>\n",
+       "      <th>AirPollutantCode</th>\n",
+       "      <th>AveragingTime</th>\n",
+       "      <th>Concentration</th>\n",
+       "      <th>UnitOfMeasurement</th>\n",
+       "      <th>DatetimeBegin</th>\n",
+       "      <th>DatetimeEnd</th>\n",
+       "      <th>Validity</th>\n",
+       "      <th>Verification</th>\n",
+       "      <th>year</th>\n",
+       "      <th>station</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>12</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-02-13 01:00:00</td>\n",
+       "      <td>2013-02-13 02:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES1992A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>13</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-02-13 02:00:00</td>\n",
+       "      <td>2013-02-13 03:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES1992A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>12</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-02-13 03:00:00</td>\n",
+       "      <td>2013-02-13 04:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES1992A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>12</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-02-13 04:00:00</td>\n",
+       "      <td>2013-02-13 05:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES1992A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>in/ES_8_2013-2015_timeseries.csv:ES</td>\n",
+       "      <td>ES.BDCA.AQD</td>\n",
+       "      <td>NET_ES209A</td>\n",
+       "      <td>STA_ES1992A</td>\n",
+       "      <td>ES1992A</td>\n",
+       "      <td>SP_08019057_8_8</td>\n",
+       "      <td>SPP_08019057_8_8.1</td>\n",
+       "      <td>SAM_08019057_8_8</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>http://dd.eionet.europa.eu/vocabulary/aq/pollu...</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>20</td>\n",
+       "      <td>µg/m3</td>\n",
+       "      <td>2013-02-13 05:00:00</td>\n",
+       "      <td>2013-02-13 06:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES1992A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Countrycode    Namespace AirQualityNetwork  \\\n",
+       "0  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD        NET_ES209A   \n",
+       "1  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD        NET_ES209A   \n",
+       "2  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD        NET_ES209A   \n",
+       "3  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD        NET_ES209A   \n",
+       "4  in/ES_8_2013-2015_timeseries.csv:ES  ES.BDCA.AQD        NET_ES209A   \n",
+       "\n",
+       "  AirQualityStation AirQualityStationEoICode    SamplingPoint  \\\n",
+       "0       STA_ES1992A                  ES1992A  SP_08019057_8_8   \n",
+       "1       STA_ES1992A                  ES1992A  SP_08019057_8_8   \n",
+       "2       STA_ES1992A                  ES1992A  SP_08019057_8_8   \n",
+       "3       STA_ES1992A                  ES1992A  SP_08019057_8_8   \n",
+       "4       STA_ES1992A                  ES1992A  SP_08019057_8_8   \n",
+       "\n",
+       "      SamplingProcess            Sample AirPollutant  \\\n",
+       "0  SPP_08019057_8_8.1  SAM_08019057_8_8          NO2   \n",
+       "1  SPP_08019057_8_8.1  SAM_08019057_8_8          NO2   \n",
+       "2  SPP_08019057_8_8.1  SAM_08019057_8_8          NO2   \n",
+       "3  SPP_08019057_8_8.1  SAM_08019057_8_8          NO2   \n",
+       "4  SPP_08019057_8_8.1  SAM_08019057_8_8          NO2   \n",
+       "\n",
+       "                                    AirPollutantCode AveragingTime  \\\n",
+       "0  http://dd.eionet.europa.eu/vocabulary/aq/pollu...          hour   \n",
+       "1  http://dd.eionet.europa.eu/vocabulary/aq/pollu...          hour   \n",
+       "2  http://dd.eionet.europa.eu/vocabulary/aq/pollu...          hour   \n",
+       "3  http://dd.eionet.europa.eu/vocabulary/aq/pollu...          hour   \n",
+       "4  http://dd.eionet.europa.eu/vocabulary/aq/pollu...          hour   \n",
+       "\n",
+       "   Concentration UnitOfMeasurement        DatetimeBegin          DatetimeEnd  \\\n",
+       "0             12             µg/m3  2013-02-13 01:00:00  2013-02-13 02:00:00   \n",
+       "1             13             µg/m3  2013-02-13 02:00:00  2013-02-13 03:00:00   \n",
+       "2             12             µg/m3  2013-02-13 03:00:00  2013-02-13 04:00:00   \n",
+       "3             12             µg/m3  2013-02-13 04:00:00  2013-02-13 05:00:00   \n",
+       "4             20             µg/m3  2013-02-13 05:00:00  2013-02-13 06:00:00   \n",
+       "\n",
+       "   Validity  Verification  year  station  \n",
+       "0         1             1  2013  ES1992A  \n",
+       "1         1             1  2013  ES1992A  \n",
+       "2         1             1  2013  ES1992A  \n",
+       "3         1             1  2013  ES1992A  \n",
+       "4         1             1  2013  ES1992A  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -274,9 +468,32 @@
     "        year = re.search('\\d{4}', file)[0]\n",
     "        station = 'ES{}A'.format(re.findall('\\d{4}', file)[1])\n",
     "        data = pd.read_csv(file, sep='\\t', names=obs_headers)\n",
-    "        observations.append((year, station, data))\n",
+    "        data['year'] = year\n",
+    "        data['station'] = station\n",
+    "        observations.append(data)\n",
     "        \n",
-    "observations[0][2].sample(5)"
+    "observations = pd.concat(observations)\n",
+    "observations.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = []\n",
+    "for folder in glob.glob('../data/mod/*'):\n",
+    "    for file in glob.glob('{}/*'.format(folder)):\n",
+    "        year = re.search('\\d{4}', file)[0]\n",
+    "        station = 'ES{}A'.format(re.findall('\\d{4}', file)[-1])\n",
+    "        data = pd.read_table(file, sep=' ', names=mod_headers)\n",
+    "        data['year'] = year\n",
+    "        data['station'] = station\n",
+    "        models.append(data)\n",
+    "        \n",
+    "models = pd.concat(models)\n",
+    "models.sample(5)"
    ]
   },
   {
@@ -286,9 +503,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "pd.concatenate"
-   ]
+   "source": []
   }
  ],
  "metadata": {
