Models data as well II

--- a/notebooks/Jonas_1.ipynb
+++ b/notebooks/Jonas_1.ipynb
@@ -478,16 +478,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lon</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>AirPollutant</th>\n",
+       "      <th>Concentration</th>\n",
+       "      <th>year</th>\n",
+       "      <th>station</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.14799</td>\n",
+       "      <td>41.4261</td>\n",
+       "      <td>2014-09-19</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>24.42280</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>ES1856A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2.18742</td>\n",
+       "      <td>41.3864</td>\n",
+       "      <td>2013-05-15</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>15.74780</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES1679A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2.11515</td>\n",
+       "      <td>41.3875</td>\n",
+       "      <td>2015-11-02</td>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>5.91385</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>ES1992A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>2.20452</td>\n",
+       "      <td>41.4039</td>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>16:00:00</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>14.36930</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>ES0691A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2.18742</td>\n",
+       "      <td>41.3864</td>\n",
+       "      <td>2015-02-09</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>NO2</td>\n",
+       "      <td>93.17560</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>ES1679A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        lon      lat         day      hour AirPollutant  Concentration  year  \\\n",
+       "4   2.14799  41.4261  2014-09-19  04:00:00          NO2       24.42280  2014   \n",
+       "6   2.18742  41.3864  2013-05-15  06:00:00          NO2       15.74780  2013   \n",
+       "27  2.11515  41.3875  2015-11-02  03:00:00          NO2        5.91385  2015   \n",
+       "40  2.20452  41.4039  2013-01-02  16:00:00          NO2       14.36930  2013   \n",
+       "21  2.18742  41.3864  2015-02-09  21:00:00          NO2       93.17560  2015   \n",
+       "\n",
+       "    station  \n",
+       "4   ES1856A  \n",
+       "6   ES1679A  \n",
+       "27  ES1992A  \n",
+       "40  ES0691A  \n",
+       "21  ES1679A  "
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models = []\n",
     "for folder in glob.glob('../data/mod/*'):\n",
     "    for file in glob.glob('{}/*'.format(folder)):\n",
     "        year = re.search('\\d{4}', file)[0]\n",
     "        station = 'ES{}A'.format(re.findall('\\d{4}', file)[-1])\n",
-    "        data = pd.read_table(file, sep=' ', names=mod_headers)\n",
+    "        data = pd.read_table(file, sep='\\s+', names=mod_headers)\n",
     "        data['year'] = year\n",
     "        data['station'] = station\n",
     "        models.append(data)\n",
