:bug: fixed bug in <prepare_data.py>

--- a/notebooks/01_jma_Main.ipynb
+++ b/notebooks/01_jma_Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import timedelta\n",
-    "from airquality.data.prepare_data import create_model_matrix, create_ts_df\n"
+    "from airquality.data.prepare_data import create_model_matrix, create_ts_df"
    ]
   },
   {
